# 715-graphics

./: .gitignore  CMakeLists.txt  README  README.md
MeshRepair/: CMakeLists.txt  MeshRepair.sln  pcd_write.cpp
MeshRepair/MeshRepair/: MeshRepair.vcxproj
MeshRepair/notBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MESH_COMPLETION.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pcd_write_test.vcxproj  pcd_write_test.vcxproj.filters
components/common/: CMakeLists.txt  parse.cpp
components/common/include/: common.h  graph.h  parse.h
components/extract_cloud/: CMakeLists.txt  region_growing.cpp
components/face_graph/: CMakeLists.txt
components/face_graph/include/: face_graph.hpp
components/face_segmentation/: CMakeLists.txt
components/face_segmentation/include/: face_segmentation.hpp
components/graph_manip/: CMakeLists.txt  README  demo_config.ini  graph_manip.cpp
components/make_test_models/: CMakeLists.txt  CubeWithHole.ply  README  config.ini  make_test_models.cpp
components/noise_generator/: CMakeLists.txt  README
components/noise_generator/Test-Models/: cube.ply  half-house.ply
components/normal_estimation/: CMakeLists.txt  normal_estimation.cpp
components/plane_clustering/: CMakeLists.txt  demo_config.ini  plane_clustering.cpp
components/plane_fitting/: region_growing.cpp
components/read_pcl/: read_pcl.cpp
components/region_growing/: region_growing.cpp
components/sebastian_making_noise/: CMakeLists.txt  noise.cpp
components/sebastian_making_noise/Test-Models/: plane.ply
components/voxel_approx/: CMakeLists.txt  voxel_approx.cpp
test_models/: Building01_cut1.ply  Building01_cut2.ply  CubeWithHole.ply  CubeWithHole_Noise.ply  CubeWithHole_Noise_true.ply  ab.ply  cubebroken.ply
test_models/noisy-outputs/: output-noisy-cube-0.01-0.01.ply  output-noisy-cube-0.01-0.1.ply  output-noisy-cube-2windows-fading-0.01-0.01.ply  output-noisy-cube-2windows-fading-0.01-0.1.ply  output-noisy-cube-windows-0.01-0.01.ply  output-noisy-cube-windows-0.01-0.1.ply  output-noisy-cube-windows-fading-0.01-0.01.ply  output-noisy-cube-windows-fading-0.01-0.1.ply
testing/read_pcl/: CMakeLists.txt  read_pcl.cpp
testing/segmentation/: region_growing.cpp
