cmake_minimum_required(VERSION 2.8 FATAL_ERROR)


add_subdirectory(components/common)
add_subdirectory(components/face_graph)
add_subdirectory(components/normal_estimation)
add_subdirectory(components/read_pcl)
add_subdirectory(components/region_growing)
add_subdirectory(components/plane_clustering)
add_subdirectory(components/voxel_approx)
